# ArenaGaming

./: .dockerignore  .gitignore  APIArena.py  APIArena2.py  Dockerfile  README.md  bot_runner.py  champion.json  commands.py  data.txt  data_manager.py  exemplegamedata  fix_api.py  get_account_direct.py  get_both_puuids.py  get_summoner_info.py  loops.py  lp_data.json  main.py  pyproject.toml  ranksexemple  requirements.txt  riot_api.py  settings.json  simple_bot.py  start.sh  summoners_to_watch.json.backup  tactician.json  test_tft.py  tftgamedataexemple  update_all_puuids.py  utils.py
.github/: copilot-instructions.md
data/: items.json
data/watch_data/: guild_1220706693294325790_watched.json.backup
src/: __init__.py
src/api/: __init__.py  match_api.py  summoner_api.py  tft_api.py  tft_api_new.py
src/commands/: __init__.py  admin_commands.py  match_commands.py  profile_commands.py
src/config/: settings.py
src/models/: config_models.py  daily_stats_models.py  game_models.py
src/services/: daily_stats_service.py  game_detection.py  game_detection_test.py
src/utils/: data_persistence.py  discord_embeds.py  item_image_generator.py  rate_limiter.py
